Handle Mixin errors and reworked config.